--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-	<div class="content" style="margin:100px;">
+	<div class="content" style="margin:100px 100px 0 100px;">
 		<div class="holder-fluid">
 			<h2 style="border:1px solid #00ca72;float:left;color:#00ca72;padding:5px;box-shadow: 0 0 10px #9ecaed;">AK</h2>
 			<div class="list-inline" style="float:right;padding:10px;">
@@ -35,12 +35,13 @@
 				</ul>
 			</div>
 		</div>
-	</div>
 
+	</div>
+<div class="bg"><img src="bg.png" alt=""></div>
 	<div class="left"></div>
 	<div class="right"></div>
 	<div class="top"></div>
-	<div class="bottom"><div class="bg"><img src="bg.png" alt=""></div></div>
+	<div class="bottom"></div>
 
 
 	<script type="text/javascript">
