--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 
 	</div>
-<div class="bg"><img src="bg.png" alt=""></div>
+<div class="bg"><img src="bg.svg" alt=""></div>
 	<div class="left"></div>
 	<div class="right"></div>
 	<div class="top"></div>
